Fixed tagline spacing and wrapping

--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,7 @@ h6 {font-size: 1.2em;}
 }
 
 .header p {
-  font-size: 28px;
-  letter-spacing: 10px;
+  font-size: 26px;
 }
 
 .top-bar {
